# typex

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
components/heading/: heading.rs
src/: App.css  App.tsx  components.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DirectoryTree.css  DirectoryTree.tsx  EnhancedTable.css  MarkdownEditor.tsx  SlashToolbar.css  SlashToolbar.tsx  TableEditor.css  TableEditor.tsx  TableInserter.css  TableInserter.tsx  editor.rs  heading.rs  text.rs
src/utils/: tableAst.ts
